--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     image: nginx
     container_name: webserver
     restart: always
-    env_file: .env
+#    env_file: .env
     ports:
       - "80:80"
       - "443:443"
@@ -50,7 +50,7 @@ services:
       - ./nginx/logs:/var/log/nginx
     networks:
       - app-network
-    command: /bin/bash -c "envsubst \${MAIN_DOMAIN} < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/nginx.conf && nginx -g 'daemon off;'"
+#    command: /bin/bash -c "envsubst \${MAIN_DOMAIN} < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/nginx.conf && nginx -g 'daemon off;'"
 
   certbot:
     depends_on:
