--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -2,10 +2,10 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name ${MAIN_DOMAIN}
+    server_name tet-proyecto2.ga
 
-    ssl_certificate /etc/letsencrypt/live/${MAIN_DOMAIN}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${MAIN_DOMAIN}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/tet-proyecto2.ga/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tet-proyecto2.ga/privkey.pem;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
@@ -32,19 +32,19 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name www.${MAIN_DOMAIN};
+    server_name www.tet-proyecto2.ga;
 
-    ssl_certificate /etc/letsencrypt/live/${MAIN_DOMAIN}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${MAIN_DOMAIN}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/tet-proyecto2.ga/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tet-proyecto2.ga/privkey.pem;
 
-    return 301 https://${MAIN_DOMAIN}$request_uri;
+    return 301 https://tet-proyecto2.ga$request_uri;
 }
 
 server {
     listen 80;
     listen [::]:80;
 
-    server_name ${MAIN_DOMAIN} www.${MAIN_DOMAIN};
+    server_name tet-proyecto2.ga www.tet-proyecto2.ga;
 
-    return 301 https://${MAIN_DOMAIN}$request_uri;
+    return 301 https://tet-proyecto2.ga$request_uri;
 }
