docker-compose for certificate

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name tet-proyecto2.ga
+    server_name tet-proyecto2.ga;
 
     ssl_certificate /etc/letsencrypt/live/tet-proyecto2.ga/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/tet-proyecto2.ga/privkey.pem;
