nginx fix; directories were changed

--- a/main-server/cert/nginx/nginx.conf
+++ b/main-server/cert/nginx/nginx.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
     listen [::]:80;
-    root /var/www/html/wordpress;
+    root /var/www/html;
     index index.php;
-    server_name tet-proyecto2.ga www.tet-proyecto2.ga gallery.tet-proyecto2.ga;
+    server_name tet-proyecto2.ga www.tet-proyecto2.ga;
     
     location / {
             try_files $uri $uri/ =404;
