--- a/main-server/docker-compose.yml
+++ b/main-server/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - "443:443"
     volumes:
       - wordpress:/var/www/html
+#      - ./cert/nginx:/etc/nginx/conf.d
       - ./nginx:/etc/nginx/conf.d
       - certbot-etc:/etc/letsencrypt
       - ./nginx/logs:/var/log/nginx
@@ -59,6 +60,7 @@ services:
       - certbot-etc:/etc/letsencrypt
       - wordpress:/var/www/html
     command: certonly --webroot --webroot-path=/var/www/html --email $EMAIL_DOMAIN --agree-tos --no-eff-email -d $MAIN_DOMAIN -d www.$MAIN_DOMAIN -d gallery.$MAIN_DOMAIN
+#    command: delete --cert-name $MAIN.DOMAIN
 
 volumes:
   certbot-etc:
