new domain: proyecto2-tet.tk

--- a/gallery-server/cert/nginx/nginx.conf
+++ b/gallery-server/cert/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:80;
     root /var/www/html;
     index index.php;
-    server_name gallery.tet-proyecto2.ga;
+    server_name gallery.proyecto2-tet.tk;
     
     location / {
             try_files $uri $uri/ =404;
