--- a/main-server/.env.example
+++ b/main-server/.env.example
@@ -1,6 +1,5 @@
 EMAIL_DOMAIN=jsdiazo@eafit.edu.co
-MAIN_DOMAIN=tet-proyecto2.ga
-GALLERY_DOMAIN=gallery.tet-proyecto2.ga
+MAIN_DOMAIN=proyecto2-tet.tk
 MYSQL_USER=vm_user
 MYSQL_PASSWORD=vm_user123pass
 MYSQL_ROOT_PASSWORD=root
