--- a/main-server/cert/nginx/nginx.conf
+++ b/main-server/cert/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:80;
     root /var/www/html;
     index index.php;
-    server_name tet-proyecto2.ga www.tet-proyecto2.ga;
+    server_name proyecto2-tet.tk www.proyecto2-tet.tk;
     
     location / {
             try_files $uri $uri/ =404;
