--- a/gallery-server/.env.example
+++ b/gallery-server/.env.example
@@ -1,5 +1,5 @@
 EMAIL_DOMAIN=jsdiazo@eafit.edu.co
-MAIN_DOMAIN=gallery.tet-proyecto2.ga
+MAIN_DOMAIN=gallery.proyecto2-tet.tk
 MYSQL_USER=vm_user
 MYSQL_PASSWORD=vm_user123pass
 MYSQL_ROOT_PASSWORD=root
