--- a/gallery-server/nginx/nginx.conf
+++ b/gallery-server/nginx/nginx.conf
@@ -2,10 +2,10 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name gallery.tet-proyecto2.ga;
+    server_name gallery.proyecto2-tet.tk;
 
-    ssl_certificate /etc/letsencrypt/live/gallery.tet-proyecto2.ga/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/gallery.tet-proyecto2.ga/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/gallery.proyecto2-tet.tk/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/gallery.proyecto2-tet.tk/privkey.pem;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
@@ -32,19 +32,19 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name gallery.tet-proyecto2.ga;
+    server_name gallery.proyecto2-tet.tk;
 
-    ssl_certificate /etc/letsencrypt/live/gallery.tet-proyecto2.ga/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/gallery.tet-proyecto2.ga/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/gallery.proyecto2-tet.tk/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/gallery.proyecto2-tet.tk/privkey.pem;
 
-    return 301 https://gallery.tet-proyecto2.ga$request_uri;
+    return 301 https://gallery.proyecto2-tet.tk$request_uri;
 }
 
 server {
     listen 80;
     listen [::]:80;
 
-    server_name gallery.tet-proyecto2.ga;
+    server_name gallery.proyecto2-tet.tk;
 
-    return 301 https://gallery.tet-proyecto2.ga$request_uri;
+    return 301 https://gallery.proyecto2-tet.tk$request_uri;
 }
