nginx route parameterized

--- a/main-server/.env.example
+++ b/main-server/.env.example
@@ -3,3 +3,7 @@ MAIN_DOMAIN=proyecto2-tet.tk
 MYSQL_USER=vm_user
 MYSQL_PASSWORD=vm_user123pass
 MYSQL_ROOT_PASSWORD=root
+
+# nginx conf file
+#NGINX_CONF=./cert/nginx:/etc/nginx/conf.d
+NGINX_CONF=./nginx:/etc/nginx/conf.d
