--- a/gallery-server/docker-compose.yml
+++ b/gallery-server/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - db
     links:
       - db
-    image: wordpress:5.1.1-fpm-alpine
+    image: wordpress:fpm-alpine
     container_name: wordpress
     restart: unless-stopped
     env_file: .env
