--- a/db-server/docker-compose.yml
+++ b/db-server/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: db
     restart: unless-stopped
     env_file: .env
+    ports:
+      - "3306:3306"
     environment:
       - MYSQL_DATABASE=wordpress
     volumes:
