--- a/wordpress-main/.env.example
+++ b/wordpress-main/.env.example
@@ -1,6 +1,6 @@
 EMAIL_DOMAIN=jsdiazo@eafit.edu.co
-MAIN_DOMAIN=gallery.proyecto2-tet.tk
+MAIN_DOMAIN=proyecto2-tet.tk
 MYSQL_USER=vm_user
 MYSQL_PASSWORD=vm_user123pass
 MYSQL_ROOT_PASSWORD=root
-DB_SERVER=db
+DB_SERVER=main-db.internal
