--- a/wordpress-main/docker-compose.yml
+++ b/wordpress-main/docker-compose.yml
@@ -13,6 +13,27 @@ services:
       - WORDPRESS_DB_NAME=wordpress
     volumes:
       - wordpress:/var/www/html
+    networks:
+      - app-network
+
+  webserver:
+    depends_on:
+      - wordpress
+    image: nginx
+    container_name: webserver
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - wordpress:/var/www/html
+      - ./nginx/logs:/var/log/nginx
+    networks:
+      - app-network
 
 volumes:
   wordpress:
+
+networks:
+  app-network:
+    driver: bridge
