--- a/wordpress-main/docker-compose.yml
+++ b/wordpress-main/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - "443:443"
     volumes:
       - wordpress:/var/www/html
+      - ./nginx:/etc/nginx/conf.d
       - ./nginx/logs:/var/log/nginx
     networks:
       - app-network
