nginx conf file for lb

--- a/nginx-lb/docker-compose.yml
+++ b/nginx-lb/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - wordpress:/var/www/html
       - certbot-etc:/etc/letsencrypt
+      - ./nginx:/etc/nginx/conf.d
       - ./nginx/logs:/var/log/nginx
 
   certbot:
