--- a/nginx-lb/nginx/nginx.conf
+++ b/nginx-lb/nginx/nginx.conf
@@ -1,16 +1,15 @@
 upstream webapp1 {
-    server 10.130.227.11;
-    server 10.130.227.22;
+    server 10.182.0.2;
 }
 
 server {
     listen 80;
-    listen 443 ssl;
+    #listen 443 ssl;
     server_name proyecto2-tet.tk www.proyecto2-tet.tk;
 
-    ssl on;
-    ssl_certificate /etc/letsencrypt/live/proyecto2-tet.tk/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/proyecto2-tet.tk/privkey.pem;
+    #ssl on;
+    #ssl_certificate /etc/letsencrypt/live/proyecto2-tet.tk/fullchain.pem;
+    #ssl_certificate_key /etc/letsencrypt/live/proyecto2-tet.tk/privkey.pem;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
@@ -22,9 +21,10 @@ server {
     }
     
     location ~ \.php$ {
-            fastcgi_pass http://webapp1;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fastcgi_params;
+            proxy_pass http://webapp1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
