--- a/wordpress/.env.example2
+++ b/wordpress/.env.example2
@@ -3,7 +3,4 @@ MAIN_DOMAIN=gallery.proyecto2-tet.tk
 MYSQL_USER=vm_user
 MYSQL_PASSWORD=vm_user123pass
 MYSQL_ROOT_PASSWORD=root
-
-# nginx conf file
-#NGINX_CONF=./cert/nginx:/etc/nginx/conf.d
-NGINX_CONF=./nginx:/etc/nginx/conf.d
+DB_SERVER=gallery-db.internal
