redis container named

--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -11,15 +11,10 @@ services:
         max-file: "3"
     env_file: .env
     environment:
-      - WORDPRESS_DB_HOST=$DB_SERVER:3306
+      - WORDPRESS_DB_HOST=db:3306
       - WORDPRESS_DB_USER=$MYSQL_USER
       - WORDPRESS_DB_PASSWORD=$MYSQL_PASSWORD
       - WORDPRESS_DB_NAME=wordpress
-      - W3TC_CONFIG_CACHE_ENGINE=redis
-      - W3TC_CONFIG_CACHE_REDIS_SERVERS=redis:6379
-      - W3TC_CONFIG_CACHE_REDIS_PERSISTENT=true
-      - W3TC_CONFIG_CACHE_REDIS_DBID=0
-      - W3TC_CONFIG_CACHE_REDIS_PASSWORD=''
     volumes:
       - wordpress:/var/www/html
     networks:
@@ -43,6 +38,7 @@ services:
 
   cache:
     image: redis:6
+    container_name: redis
     restart: always
     logging:
       options:
