--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         max-file: "3"
     env_file: .env
     environment:
-      - WORDPRESS_DB_HOST=db:3306
+      - WORDPRESS_DB_HOST=$DB_SERVER:3306
       - WORDPRESS_DB_USER=$MYSQL_USER
       - WORDPRESS_DB_PASSWORD=$MYSQL_PASSWORD
       - WORDPRESS_DB_NAME=wordpress
